--- a/mfcss/style.css
+++ b/mfcss/style.css
@@ -64,7 +64,7 @@
       margin-top: 10px;
     }
 
-    input[type="reset"], input[type="button"] {
+    input[type="reset"], input[type="Submit"] {
       background-color: #ffa500;
       color: white;
       padding: 10px 15px;
